# sha256_literal

./: CMakeLists.txt  example.cpp  sha256.cpp
include/sha256_literal/: sha256_literal.h  utility.h
